# claude-agent-hub-mac

./: .gitignore  .mcp.json  CLAUDE.md  README.md  setup.sh
.claude/: settings.json
.claude/rules/: autonomous-constraints.md  git-rules.md  prohibited-actions.md
agents/templates/base/: CLAUDE.md
agents/templates/dev/: CLAUDE.md
agents/templates/research/: CLAUDE.md
api/: go.mod  go.sum
api/cmd/server/: main.go  session_name_test.go
api/data/: claude-hub.db
api/internal/config/: apps.go  config.go  strategies.go
api/internal/database/: agents.go  cron_jobs.go  (+7 more)
api/migrations/: 001_initial_schema.sql  002_discussions.sql  002_discussions_sqlite.sql
config/: limits.yaml  projects.template.yaml  projects.yaml  services.yaml
docs/: architecture-diagram-prompt.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
launchd/: com.claude-agent-hub.manager.plist
scripts/: instance-manager.sh  merge-template.sh  setup-memory-engine.sh  start-mlx.sh  start.sh  status.sh  stop.sh  update-obsidian-dashboard.sh
scripts/hooks/: auto-lint.sh  block-dangerous.sh  scope-enforcer.sh  session-end.sh  session-start.sh  spawn-limiter.sh
services/memory-engine/: pyproject.toml
services/memory-engine/memory_engine/: __init__.py  chunker.py  cli.py  config.py  db.py  embedder.py  redact.py  search.py  server.py  summarizer.py  transcript_parser.py
services/memory-engine/tests/: test_chunker.py  test_db.py  test_redact.py  test_search.py  test_summarizer.py  test_transcript_parser.py
(+77 files in other folders)
