[project]
name = "memory-engine"
version = "0.1.0"
description = "Claude Code長期記憶エンジン（sui-memory型）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "sqlite-vec>=0.1.6",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
memory-engine = "memory_engine.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
